# roosty-clock

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: clippy&fmt.yml  msrv.yml  release.yml  rust-test.yml
roosty_clock/: Cargo.toml
roosty_clock/src/: alarm_edit.rs  config.rs  lib.rs  main.rs  widgets.rs
roosty_clockd/: Cargo.toml
roosty_clockd/src/: config.rs  lib.rs  main.rs
src/: alarm.rs  alarm_edit.rs  communication.rs  config.rs  lib.rs  main.rs  widgets.rs
