[package]
name = "roosty_clock"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/roosty-clock"
readme = "README.md"
description = "A simple alarm clock"
categories = ["date-and-time"]
keywords = ["rooster", "alarm", "clock", "alarm-clock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gui crates
eframe = { version = "0.23.0" }
# time crates
chrono = "0.4.31"
# logging crates
simple_file_logger = "0.3.1"
log = "0.4.17"

# file selection dialogs
rfd = "0.12.1"

# TODO: sound crates

# config crates
directories = "5.0.1"
serde = "1.0.190"
toml-datetime-compat = {version = "0.2.0", features = ["chrono"]}
toml = "0.8.6"
clap = { version = "4.4.7", features = ["derive"] }
