[package]
name = "roosty_clock"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/roosty-clock"
readme = "README.md"
description = "A simple alarm clock"
categories = ["date-and-time"]
keywords = ["rooster", "alarm", "clock", "alarm-clock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gui crates
eframe = { version = "0.33.3" }
# time crates
chrono = "0.4.31"
# logging crates
simple_file_logger = "0.4.2"
log = "0.4.17"

# file selection dialogs
rfd = "0.16.0"

# sound crates
rodio = "0.21.1"
cpvc = { git = "https://github.com/xephyris/cpvc", version = "0.4.1" }

# config crates
directories = "6.0.0"
serde = "1.0.190"
toml-datetime-compat = {version = "0.3.0", features = ["chrono"]}
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive"] }
