[package]
name = "roosty_clock"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mendelsshop/roosty-clock"
readme = "README.md"
description = "A simple alarm clock"
categories = ["date-and-time"]
keywords = ["rooster", "alarm", "clock", "alarm-clock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gui crates
eframe = { version = "0.33.3" }
# time crates
chrono = {version ="0.4.31", features= ["serde"]}
# logging crates
simple_file_logger = "0.4.2"
log = "0.4.17"

# file selection dialogs
rfd = "0.16.0"

# sound crates
rodio = "0.21.1"
cpvc = { git = "https://github.com/xephyris/cpvc", version = "0.4.1" }

# config crates
directories = "6.0.0"
serde = "1.0.190"
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive"] }
interprocess = "2.2.3"
roosty_clockd = { version = "0.1.0", path = "../roosty_clockd" }
bitcode = "0.6.9"
