[package]
name = "roosty_clock"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mendelsshop/roosty-clock"
readme = "README.md"
description = "A simple alarm clock"
categories = ["date-and-time"]
keywords = ["rooster", "alarm", "clock", "alarm-clock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gui crates
eframe = { version = "0.34.1" }
# time crates
chrono = {version ="0.4.44", features= ["serde"]}
# logging crates
simple_file_logger = "0.4.2"
log = "0.4.29"

# file selection dialogs
rfd = "0.17.2"

# sound crates
rodio = "0.22.2"
cpvc = {  version = "0.6.0" }

# config crates
directories = "6.0.0"
serde = "1.0.228"
toml = "1.1.2"
clap = { version = "4.6.0", features = ["derive"] }
interprocess = "2.4.0"
roosty_clockd = { version = "0.1.0", path = "../roosty_clockd" }
bitcode = "0.6.9"
