[package]
name = "roosty_clockd"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = "2.2.3"
serde = { version = "1.0.228", features = ["derive"] }
toml-datetime-compat = {version = "0.3.0", features = ["chrono"]}
toml = "0.9.8"
chrono = "0.4.31"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
timer = "0.2.0"
rodio = "0.21.1"
cpvc = { git = "https://github.com/xephyris/cpvc", version = "0.4.1" }
bitcode = { version = "0.6.9", features = ["serde"] }
