[package]
name = "roosty_clockd"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
chrono = {version ="0.4.31", features= ["serde"]}
crossbeam-channel = "0.5.15"
directories = "6.0.0"
timer = "0.2.0"
rodio = "0.22.2"
cpvc = { version = "0.6.0" }
bitcode = { version = "0.6.9", features = ["serde"] }
async-broadcast = "0.7.2"
